added titanic_log_reg.ipynb for svm and logistic regression

--- a/linear_regression/boston_lin_reg.ipynb
+++ b/linear_regression/boston_lin_reg.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -33,11 +35,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "dataset = load_boston()\n",
-    "df_x = pd.DataFrame(dataset.data, columns = dataset.feature_names)\n",
+    "raw_df_x = pd.DataFrame(dataset.data, columns = dataset.feature_names)\n",
     "df_y = pd.DataFrame(dataset.target, columns = [\"Price\"])"
    ]
   },
@@ -51,7 +55,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "dataset.DESCR"
@@ -65,10 +71,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "df_x.drop(columns=['CHAS'])"
+    "df_x=raw_df_x.drop(columns=['CHAS'])\n",
+    "new_features=dataset.feature_names.tolist()\n",
+    "new_features.remove('CHAS')"
    ]
   },
   {
@@ -81,7 +93,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "print(df_x.describe())\n",
@@ -98,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "model = linear_model.LinearRegression()\n",
@@ -119,7 +135,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -129,8 +147,8 @@
     "matplotlib.rcParams.update({'font.size': 22})\n",
     "\n",
     "i=1\n",
-    "for feature in dataset.feature_names:\n",
-    "    plt.subplot(7, 2, i)\n",
+    "for feature in new_features:\n",
+    "    plt.subplot(6, 2, i)\n",
     "    training = plt.scatter(x_train[feature], y_train, color=\"green\", marker='.', alpha=1, s=150, label = \"training\")\n",
     "    predicted = plt.scatter(x_test[feature], y_predict, color=\"blue\", marker='.', alpha=1, s=150, label = \"predicted\")\n",
     "    \n",
@@ -159,7 +177,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics import mean_squared_error\n",
@@ -176,10 +196,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "plt.rcParams['figure.figsize'] = [10, 5]\n",
+    "plt.rcParams['figure.figsize'] = [7, 5]\n",
     "plt.style.use('dark_background')\n",
     "matplotlib.rcParams.update({'font.size': 10})\n",
     "plt.xlabel('test sample id')\n",
@@ -192,10 +214,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "plt.rcParams['figure.figsize'] = [10, 5]\n",
+    "plt.rcParams['figure.figsize'] = [7, 5]\n",
     "plt.style.use('dark_background')\n",
     "matplotlib.rcParams.update({'font.size': 10})\n",
     "plt.xlabel('test sample id')\n",
