--- a/logistic_regression/titanic_log_reg.ipynb
+++ b/logistic_regression/titanic_log_reg.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 74,
    "metadata": {
     "scrolled": true
    },
@@ -174,12 +174,13 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "dataset = pd.read_csv('dataset/train.csv')\n",
     "dataset.head()"
    ]
   },
@@ -192,9 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 75,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 76,
    "metadata": {
     "scrolled": true
    },
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -361,14 +362,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model score:  0.7623318385650224\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.77      0.85      0.81       130\n",
+      "           1       0.75      0.65      0.69        93\n",
+      "\n",
+      "    accuracy                           0.76       223\n",
+      "   macro avg       0.76      0.75      0.75       223\n",
+      "weighted avg       0.76      0.76      0.76       223\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.84      0.86      0.85       419\n",
+      "           1       0.75      0.72      0.74       249\n",
+      "\n",
+      "    accuracy                           0.81       668\n",
+      "   macro avg       0.79      0.79      0.79       668\n",
+      "weighted avg       0.81      0.81      0.81       668\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"model score: \", model.score(x_test, y_test))\n",
-    "print(classification_report(y_test, y_predict))"
+    "print(classification_report(y_test, y_predict))\n",
+    "print(classification_report(y_train, model.predict(x_train)))"
    ]
   }
  ],
