--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sayan\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('sayan')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -20,14 +37,10 @@
     "version": 3
    },
    "file_extension": ".py",
-   "git": {
-    "suppress_outputs": true
-   },
    "mimetype": "text/x-python",
-   "name": "test",
+   "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "signature": "don't change the hash, but add a comma at the end of the line",
    "version": "3.6.9"
   }
  },
