--- a/test/Untitled.ipynb
+++ b/test/Untitled.ipynb
@@ -19,6 +19,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -37,15 +54,18 @@
     "version": 3
    },
    "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
+  },
+  "metadata": {
    "git": {
     "suppress_outputs": true
    },
-   "mimetype": "text/x-python",
    "name": "Test",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "signature": "don't change the hash, but add a comma at the end of the line",
-   "version": "3.6.9"
+   "signature": "don't change the hash, but add a comma at the end of the line"
   }
  },
  "nbformat": 4,
