folder restructureand deep learning

--- a/supervised/1. linear_regression/boston_lin_reg/boston_lin_reg.ipynb
+++ b/supervised/1. linear_regression/boston_lin_reg/boston_lin_reg.ipynb
@@ -20,7 +20,8 @@
     "from sklearn.datasets import load_boston\n",
     "import seaborn as sns\n",
     "import matplotlib\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn import preprocessing"
    ]
   },
   {
@@ -71,8 +72,11 @@
    "outputs": [],
    "source": [
     "df_x=raw_df_x.drop(columns=['CHAS'])\n",
-    "new_features=dataset.feature_names.tolist()\n",
-    "new_features.remove('CHAS')"
+    "new_features=df_x.columns\n",
+    "\n",
+    "min_max_scaler = preprocessing.MinMaxScaler()\n",
+    "# apparantly standardization not having effect on regression results\n",
+    "# df_x = pd.DataFrame(min_max_scaler.fit_transform(df_x),columns=df_x.columns)"
    ]
   },
   {
