--- a/Deep Learning/boston house price/boston_nn.ipynb
+++ b/Deep Learning/boston house price/boston_nn.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "min_max_scaler = preprocessing.MinMaxScaler()\n",
     "# apparantly standardization not having effect on regression results\n",
-    "# df_x = pd.DataFrame(min_max_scaler.fit_transform(df_x),columns=df_x.columns)"
+    "df_x = pd.DataFrame(min_max_scaler.fit_transform(df_x),columns=df_x.columns)"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df_x.describe())\n",
+    "print(df_x.describe(), \"\\n\\n-----------------------------------------------------------------------------------\\n\")\n",
     "print(df_y.describe())"
    ]
   },
@@ -118,7 +118,7 @@
     "model.add(Dense(39, activation='relu'))\n",
     "model.add(Dense(13, activation='relu'))\n",
     "model.add(Dense(1, activation='relu'))\n",
-    "model.compile(optimizer='adam', loss='mse', metrics=['accuracy'])\n",
+    "model.compile(optimizer='adam', loss='mse')\n",
     "model.summary()"
    ]
   },
@@ -130,7 +130,7 @@
    "source": [
     "x_train, x_test, y_train, y_test = train_test_split(df_x, df_y, test_size = 0.25, random_state = 55)\n",
     "\n",
-    "model.fit(x_train, y_train, epochs=100, validation_split=0.2, shuffle=True)\n",
+    "model.fit(x_train, y_train, epochs=500, validation_split=0.2, shuffle=True)\n",
     "model.normalize=True\n",
     "y_predict = model.predict(x_test)"
    ]
@@ -188,12 +188,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "\n",
     "plt.rcParams['figure.figsize'] = [10, 5]\n",
     "plt.style.use('dark_background')\n",
     "matplotlib.rcParams.update({'font.size': 10})\n",
-    "plt.text(x=0.15, y=0.5, s=\"MSE: \"+str(mean_squared_error(y_test, y_predict)), fontsize=22)\n",
+    "plt.text(x=0.15, y=0.5, s=\"MAE: \"+str(mean_absolute_error(y_test, y_predict)) \\\n",
+    "         + \"\\n\\nMSE: \"+str(mean_squared_error(y_test, y_predict)) \\\n",
+    "         + \"\\nwith mean target value: \" + str(np.mean(y_test['Price'])), fontsize=22)\n",
+    "        \n",
     "plt.title('Evaluation')\n",
     "plt.show()"
    ]
@@ -224,8 +227,8 @@
     "plt.style.use('dark_background')\n",
     "matplotlib.rcParams.update({'font.size': 10})\n",
     "plt.xlabel('test sample id')\n",
-    "plt.ylabel('error in prediction')\n",
-    "plt.plot(range(len(y_predict)), (y_predict-y_test))\n",
+    "plt.ylabel('absolute error')\n",
+    "plt.plot(range(len(y_predict)), abs(y_predict-y_test))\n",
     "plt.title('Error Per Sample')\n",
     "plt.show()"
    ]
