--- a/Deep Learning/next_word_prediction/next_word_prediction.ipynb
+++ b/Deep Learning/next_word_prediction/next_word_prediction.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A model to predict the next word\n",
+    "Approach: A wholesome vocabulary has been made, and encoded into integers\n",
+    "\n",
+    "Input Array contains: 1st, 2nd, 3rd word column and next(4th word in sequence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Remove punctuation marks from words"
    ]
   },
@@ -15,16 +25,16 @@
    "source": [
     "import re\n",
     "\n",
-    "def remove_spl_char(sent):\n",
+    "def remove_spl_char(tokenized_sent):\n",
     "    \n",
-    "    punctuation = re.compile('[^a-zA-Z\\-]*')\n",
-    "    post_punctutation = []\n",
-    "    for word in sent:\n",
-    "        word=punctuation.sub(\"\", word.lower())\n",
-    "        if len(word) > 0 and word != 's':\n",
-    "            post_punctutation.append(word)\n",
+    "    punctuation = re.compile('[^a-zA-Z]*')\n",
+    "    post_punct_tokenized_sent = []\n",
+    "    for token in tokenized_sent:\n",
+    "        word=punctuation.sub(\"\", token.lower())\n",
+    "        if len(word) > 0:\n",
+    "            post_punct_tokenized_sent.append(word)\n",
     "\n",
-    "    return post_punctutation"
+    "    return post_punct_tokenized_sent"
    ]
   },
   {
@@ -40,18 +50,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk import corpus\n",
-    "list_of_sent = []\n",
-    "for name in corpus.gutenberg.fileids():\n",
-    "    sublist_of_sent = corpus.gutenberg.sents(name)\n",
-    "    list_of_sent.extend(sublist_of_sent)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## tokenize sentences"
+    "from nltk.corpus import gutenberg\n",
+    "all_tokenized_sentences = []\n",
+    "for name in gutenberg.fileids():\n",
+    "    tokenized_sentences = gutenberg.sents(name)\n",
+    "    all_tokenized_sentences.extend(tokenized_sentences)"
    ]
   },
   {
@@ -60,18 +63,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_of_tokenized_sent = [remove_spl_char(sent) for sent in list_of_sent]\n",
-    "# list_of_tokenized_sent\n",
-    "for elem in list_of_tokenized_sent:\n",
-    "    if len(elem) <= 3:\n",
-    "        list_of_tokenized_sent.remove(elem)"
+    "all_tokenized_sentences=all_tokenized_sentences[:200]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Apply word2vec"
+    "## Process sentence tokens"
    ]
   },
   {
@@ -80,8 +79,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gensim\n",
-    "ml=gensim.models.Word2Vec(list_of_tokenized_sent, size=50, min_count=1)"
+    "processed_sentences = [remove_spl_char(tokenized_sent) for tokenized_sent in all_tokenized_sentences]\n",
+    "processed_sentences = [sent for sent in processed_sentences if len(sent) > 3] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Enumerate Vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab = list(set([word for sent in processed_sentences for word in sent]))\n",
+    "len(vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictionary = {b : a for (a, b) in enumerate(vocab)}\n",
+    "reverse_dictionary = {a : b for (a, b) in enumerate(vocab)}"
    ]
   },
   {
@@ -97,8 +123,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "word_input = [ [ ml.wv[sent[i]], ml.wv[sent[i+1]], ml.wv[sent[i+2]] ] for sent in list_of_tokenized_sent for i in range(len(sent)-3)]"
+    "import numpy as np\n",
+    "from nltk.util import ngrams\n",
+    "trigrams = ngrams\n",
+    "word_input = np.array([words for sent in processed_sentences for words in ngrams(sent[:-1], 3)])\n",
+    "word_output = np.array([words for sent in processed_sentences for words in sent[3:]])"
    ]
   },
   {
@@ -107,7 +136,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "word_output = [ ml.wv[sent[i]] for sent in list_of_tokenized_sent for i in range(3, len(sent))]"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "label=LabelEncoder()\n",
+    "word_output_encoded=label.fit_transform(word_output)\n",
+    "\n",
+    "label_classes = to_categorical(word_output_encoded.reshape(-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.DataFrame({\"Input1\" : [dictionary[x] for x in word_input[:,0]], \n",
+    "                     \"Input2\" : [dictionary[x] for x in word_input[:,1]], \n",
+    "                     \"Input3\" : [dictionary[x] for x in word_input[:,2]], \n",
+    "                     \"Output\" : label_class}).to_numpy()\n",
+    "data=data.reshape(len(data), 4, 1)\n",
+    "data"
    ]
   },
   {
@@ -124,16 +172,17 @@
    "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
-    "from keras.layers import LSTM\n",
+    "from keras.layers import LSTM, Dropout, Dense\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from keras.losses import categorical_crossentropy"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## split train and test data"
+    "## Split Train and Test Data"
    ]
   },
   {
@@ -142,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(np.array(word_input), np.array(word_output), test_size=0.2, random_state =22)"
+    "train_size = int(len(data)*0.8)"
    ]
   },
   {
@@ -159,10 +208,9 @@
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(LSTM((350), activation = 'relu', batch_input_shape=(None, 3, 50), return_sequences = True))\n",
-    "model.add(LSTM((150), activation = 'relu', return_sequences = True))\n",
-    "model.add(LSTM((50), activation = 'relu', return_sequences = False))\n",
-    "model.compile(loss='mean_squared_error', optimizer='sgd', metrics=['accuracy'])\n",
+    "model.add(LSTM((500), activation = 'relu', batch_input_shape=(None, 3, 1), return_sequences = True))\n",
+    "model.add(LSTM((984), activation = 'softmax', return_sequences = False))\n",
+    "model.compile(loss=categorical_crossentropy, optimizer='sgd', metrics=['accuracy'])\n",
     "\n",
     "model.summary()"
    ]
@@ -180,7 +228,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = model.fit(x_train, y_train, epochs = 5, validation_data = (x_test, y_test))"
+    "history = model.fit(data[:train_size, 0:3], \n",
+    "                    label_classes[:train_size], epochs = 5, \n",
+    "                    validation_data = (data[train_size: , 0:3], label_classes[train_size:]))"
    ]
   },
   {
@@ -196,11 +246,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dictionary=dict(zip(ml.wv.vectors[0], ml.wv.index2word))\n",
-    "dictionary[ml['the'][0]]\n",
-    "y_test[:, 0]\n",
-    "model.predict(x_test)[:, 0]"
+    "def get_word(num):\n",
+    "    return reverse_dictionary[num]\n",
+    "\n",
+    "p=model.predict_classes(data[train_size: , 0:3])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
